[package]
authors = ["Zoron <fralonra@aliyun.com>"]
description = "An experimental markup language focused on presentation making"
edition = "2021"
homepage = "https://github.com/fralonra/opmark"
keywords = ["opmark", "parser"]
license = "MIT"
name = "opmark"
readme = "README.md"
repository = "https://github.com/fralonra/opmark"
version = "0.0.2"
